# convert-case

./: .gitignore  .npmignore  Cargo.toml  README.md  main.d.ts  main.ts  package-lock.json  package.json
src/: lib.rs
tests/: all.test.ts
