[package]
name = "node-convert-case"
version = "0.1.0"
authors = ["WildW"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = { version = "0.6.0", features = ["random"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
